; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_port.c_tipc_send2name.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_port.c_tipc_send2name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tipc_name = type { i32 }
%struct.iovec = type { i32 }
%struct.tipc_portid = type { i32, i32 }

@tipc_own_addr = common dso_local global i32 0, align 4
@TIPC_PORT_IMPORTANCE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tipc_send2name(i32 %0, %struct.tipc_name* %1, i32 %2, i32 %3, %struct.iovec* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.tipc_name*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.iovec*, align 8
  %11 = alloca %struct.tipc_portid, align 4
  store i32 %0, i32* %6, align 4
  store %struct.tipc_name* %1, %struct.tipc_name** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.iovec* %4, %struct.iovec** %10, align 8
  %12 = load i32, i32* %6, align 4
  %13 = getelementptr inbounds %struct.tipc_portid, %struct.tipc_portid* %11, i32 0, i32 1
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @tipc_own_addr, align 4
  %15 = getelementptr inbounds %struct.tipc_portid, %struct.tipc_portid* %11, i32 0, i32 0
  store i32 %14, i32* %15, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.tipc_name*, %struct.tipc_name** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load %struct.iovec*, %struct.iovec** %10, align 8
  %21 = load i32, i32* @TIPC_PORT_IMPORTANCE, align 4
  %22 = call i32 @tipc_forward2name(i32 %16, %struct.tipc_name* %17, i32 %18, i32 %19, %struct.iovec* %20, %struct.tipc_portid* %11, i32 %21)
  ret i32 %22
}

declare dso_local i32 @tipc_forward2name(i32, %struct.tipc_name*, i32, i32, %struct.iovec*, %struct.tipc_portid*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
